crates/ferrum-interfaces/tests/ui/vnext/fail/oracle_tensor_is_not_deserialize.rs
use ferrum_interfaces::vnext::OracleTensor;

fn main() {
    let _: OracleTensor = serde_json::from_str("{}").unwrap();
}
